--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <h3 class="footer">
           If you have time, you should read more about this incredible human
           being on his
-          <a id="tribute-link" href="https://www.wikipedia.org/" target="_blank"
+          <a id="tribute-link" href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank"
             >Wikipedia entry</a
           >.
         </h3>
